# csdb

./: .gitignore  CMakeLists.txt  compile_flags.txt  csdbd.db  dbfile.structure
.cmake/api/v1/reply/: cache-v2-7fc0a3b53075a33457a6.json  cmakeFiles-v1-af20e4e956960d2bcaad.json  codemodel-v2-cca81dc8ed1a8c5adc91.json  index-2024-07-05T11-12-02-0508.json  target-csdb-Debug-6fd454df506bcad1c254.json  toolchains-v1-050463f4608db08f3685.json
include/: exceptions.h  field.h  map.h  serialization.h
include/btree/: btree.h  node.h
include/db/: field.h
src/: btree.cpp  field.cpp  main.cpp  node.cpp
